app/static/all.css
@media (min-width:400px){
    
    #searchForm {
        background-image: url('/static/background.png');
        background-size: cover;
        
    }
    .global-search {
        margin-top: 20%;
    }

    #resultsform {
        background-image: none;
        background-color: lightblue;
    }
    #resultsform .global-search {
        margin-top: auto;
    }

    .global-search .form-group {
        width: 80%;
        display: flex;
        align-items: flex-end;
        flex-direction: row;
    }
    .global-search .form-group div {
        flex-grow: 1;
        text-align: left;
        display: flex;
        align-items: flex-end;

    }
    .global-search .form-group div:last-child {
        margin-left: 10px;
    }

    .global-search .form-group div label {
        min-width: 140px;
        flex-grow: .5;
    }
    .global-search .form-group div input {
        flex-grow: 1;
    
        
    }
    .first {
        width: 90%
    }
    
    #back2Top {
        font-size: 50px;
        position: fixed;
        width: 40px;
        transform: rotate(270deg);
        font-size: 40px;
        cursor: pointer;
        color:navy;
        cursor: pointer;
        text-decoration: none;
        bottom: 70px;
        right: 7px;
        display:none;
    }

    #back2Top:hover {
        color: lightblue;
    }

    
    .info-container {
        display: flex;
        flex-direction: row;
    }
    .left-side {
        flex: 1
    }
    .right-side {
        margin: auto 10%;
        max-width: 80%;
        padding: 10px;
        flex: 1;
        
    }
    
    .main-cointainer {
        border: 2px solid navy;
        box-shadow: 5px 10px;
        border-radius: 25px;
        min-width: 100%;
    }
    
    footer {
        background-color: navy;
        padding: 10px;
        color: white;
        bottom: 0%;
    }
    
    .sidebyside {
        display: flex;
        flex-direction: row;

    }
    .sidebyside div {
        margin: 15px;
        flex: 1;
    }
    .pullabit select:first-child {
        width: 200px;
    }
    .more {
        text-align: center;
        width: 100%;
        display: block;
    }
    #more-display {
        text-align: center;
        transform: rotate(90deg);
        font-size: 30px;
    }
    .gallary_class {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
    }
    .gallaryimg {
        max-width: 30%;
        min-width: 30%;
        flex-grow: 1;
        margin: 10px;
        
    }

    .gallary_class h1{
        width: 100%;
        Display: block;
    }
    .hidden {
        display: none;
    }
    img {
        width: 300px;
        height: 350px;
    }
    img:hover {
        opacity: 0.4;
    }
    .titleh h2 {
        font-size: 100%;
    }
    .btn-info {
        width: 30%;
    }
    .tokenfield {
        text-align: left;
        width: 400px !important;
    }
    .ui-menu-item {
        max-width: 395px !important;
    }
}

